[package]
name = "fuel-pest_derive"
description = "pest's derive macro"
version = "3.0.4"
authors = ["Dragoș Tiselice <dragostiselice@gmail.com>"]
homepage = "https://pest-parser.github.io/"
repository = "https://github.com/pest-parser/pest"
documentation = "https://docs.rs/pest"
keywords = ["pest", "parser", "peg", "grammar"]
categories = ["parsing"]
license = "MIT/Apache-2.0"
readme = "_README.md"

[lib]
name = "fuel_pest_derive"
proc-macro = true

[features]
default = ["std"]
std = ["pest/std", "pest_generator/std"]

[dependencies]
# for tests, included transitively anyway
pest = { path = "../pest", version = "3.0.4", default-features = false, package = "fuel-pest" }
pest_generator = { path = "../generator", version = "3.0.4", default-features = false, package = "fuel-pest_generator" }

[badges]
codecov = { repository = "pest-parser/pest" }
maintenance = { status = "actively-developed" }
travis-ci = { repository = "pest-parser/pest" }
