[package]
name = "fuel-pest_generator"
description = "pest code generator"
version = "3.0.4"
authors = ["Dragoș Tiselice <dragostiselice@gmail.com>"]
homepage = "https://pest-parser.github.io/"
repository = "https://github.com/pest-parser/pest"
documentation = "https://docs.rs/pest"
keywords = ["pest", "generator"]
categories = ["parsing"]
license = "MIT/Apache-2.0"
readme = "_README.md"

[features]
default = ["std"]
std = ["pest/std"]

[dependencies]
pest = { path = "../pest", version = "3.0.4", default-features = false, package = "fuel-pest" }
pest_meta = { path = "../meta", version = "3.0.4", package = "fuel-pest_meta" }
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"

[badges]
codecov = { repository = "pest-parser/pest" }
maintenance = { status = "actively-developed" }
travis-ci = { repository = "pest-parser/pest" }
